# Kaskade

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  rust.yml
adapters/: Cargo.toml
adapters/src/: lib.rs
adapters/src/omniston/: api.rs  mod.rs  parser.rs  provider.rs  types.rs  ws.rs  ws_client.rs
adapters/tests/: omniston_test.rs  ws_test.rs
backend/: .gitignore  Cargo.toml
backend/proptest-regressions/planner/: sizing.txt
backend/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  time.rs
backend/src/db/: mod.rs  schema.rs
backend/src/execution/: executor.rs  mod.rs  types.rs
backend/src/market/: manager.rs  market_view_store.rs  mod.rs  types.rs
backend/src/market/omniston/: mod.rs  normalized_quote.rs  parser.rs  rfq_ws.rs
backend/src/market/pulse/: depth.rs  input.rs  mod.rs  slippage.rs  spread.rs  trend.rs
backend/src/market/pulses/: depth.rs  mod.rs  spread.rs  trend.rs
backend/src/market/stonfi/: client.rs  errors.rs  market_service.rs  mod.rs  poller.rs  types.rs
backend/src/market_view/: mod.rs  types.rs
backend/src/metrics/: counters.rs
backend/src/planner/: mod.rs  sizing.rs  types.rs
backend/src/scheduler/: drr.rs  mod.rs  scheduler.rs
backend/src/session/: cache.rs  mod.rs  model.rs  repository.rs  repository_sqlx.rs  store.rs
backend/tests/: repository_sqlx_integration.rs  scheduler_integration.rs  sqlx_session_repository.rs  stonfi_runer_test.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
common/: Cargo.toml
common/src/logger/: init.rs  macros.rs  mod.rs  trace_id.rs
core/: Cargo.toml
core/src/: lib.rs  types.rs
core/src/models/: mod.rs  omniston_models.rs
emc/: README.md  package-lock.json  package.json  tact.config.json
emc/contracts/: accounting.fc  dicts.fc  errors.fc  getter.fc  jetton.fc  main.fc  opcodes.fc  sessions.fc  stonfi_v2_adapter.fc  storage.fc  swap.fc  utils.fc  wallets.fc  withdrawals.fc
emc/scripts/: deployMain.ts
emc/tests/: Main.spec.ts
emc/wrappers/: Main.ts
engine/: Cargo.toml
engine/src/: lib.rs  normalized_quote.rs  registry.rs  rolling_window.rs
engine/src/pulse/: dispatcher.rs  mod.rs  registry.rs  spread.rs  types.rs
engine/src/pulses/: mod.rs  spread.rs  types.rs
executor/: Cargo.toml
executor/src/: lib.rs  swap_builder.rs  types.rs
market/: Cargo.toml
market/src/: lib.rs  manager.rs  rolling_window.rs  types.rs
market/src/omniston/: mod.rs  normalized_quote.rs  parser.rs  rfq_ws.rs
market/src/pulse/: depth.rs  input.rs  mod.rs  slippage.rs  spread.rs  trend.rs
market/tests/: market_manager_tests.rs  market_runner_test.rs
migrations/: 20260204020602_init_schema.sql
scheduler/: Cargo.toml
scheduler/src/: eligibility.rs  engine.rs  lib.rs  policy.rs  state.rs  types.rs
scheduler/tests/: engine_unit_test.rs  mock_store.rs
session/: Cargo.toml  test_sessions.sqlite
session/db/migrations/: 0001_create_sessions.sql
session/src/: lib.rs  manager.rs  model.rs
session/src/store/: mod.rs  sqlite_store.rs
session/tests/: mock_store.rs  session_manager_integration.rs  session_manager_tests.rs  sqlite_store_tests.rs
