[workspace.package]
edition = "2024"

[workspace]
members = ["core", "market", "scheduler", "session"]

resolver = "2"

[workspace.dependencies]
# Workspace
market = { path = "market" }
core = { path = "core" }
session = { path = "session" }

# External
async-trait = "0.1.89"
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
