[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
corelib = { path = "../core" } 

serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
