[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

uuid = { version = "1.20", features = ["v4", "serde"] }

parking_lot = "0.12"
async-trait = "0.1"

tokio = { version = "1.37", features = ["full"] }

anyhow = "1.0"
thiserror = "2.0.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.sqlx]
version = "0.8.6"
features = [
  "runtime-tokio-rustls",
  "macros",
  "sqlite",
  "postgres",
  "uuid",
  "chrono"
]