[package]
name = "executor"
version = "0.1.0"
edition.workspace = true

[dependencies]
market = { path = "../market" } 
session = { path = "../session" } 
scheduler = { path = "../scheduler" } 
tokio.workspace = true 
anyhow.workspace = true 
async-trait.workspace = true 
thiserror.workspace = true
