[package]
name = "market"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
