[package]
name = "session"
version = "0.1.0"
edition.workspace = true

[dependencies]
market = { path = "../market" } 
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
